# realtime-earth

./: .env.example  .gitignore  LICENSE  PUSH_TO_GITHUB.md  README.md  docker-compose.yml  push-to-github.ps1  start.bat  start.py  start.sh
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  logger.py  scheduler.py  state.py
backend/app/models/: schemas.py
backend/app/routers/: __init__.py  earth.py  health.py  lightning.py  satellites.py  solar.py  websocket.py
backend/app/sources/: __init__.py  base.py  earthquakes.py  lightning.py  satellites.py  solar.py  volcanoes.py  wildfires.py
backend/tests/: __init__.py  smoke_sources.py  test_api.py
demo/: boot-remote-demo.ps1  index.html  serve-remote.ps1  stop-remote-demo.ps1
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DEVELOPMENT.md  OPERATIONS.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  style.css  types.ts
frontend/src/components/: DetailPanel.vue  GlobeView.vue  Sidebar.vue  StatusBar.vue  TopBar.vue
frontend/src/components/details/: EarthquakeDetail.vue  SatelliteDetail.vue  VolcanoDetail.vue
frontend/src/components/panels/: EarthPanel.vue  LayersPanel.vue  LightningPanel.vue  SatellitePanel.vue  SolarPanel.vue
frontend/src/composables/: useEarthWebSocket.ts
frontend/src/stores/: earth.ts
