[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-earth-backend"
version = "0.1.0"
description = "Backend for Realtime Earth — live atlas of public data"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "httpx==0.27.2",
    "sgp4==2.23",
    "numpy==1.26.4",
    "python-dateutil==2.9.0.post0",
    "apscheduler==3.10.4",
    "orjson==3.10.7",
    "python-multipart==0.0.12",
    "websockets==13.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.8",
    "mypy==1.11.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ASYNC", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
